--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mongoose": "^6.4.0",
     "puppeteer": "^14.1.1"
   }
 }
